--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.1",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-config-prettier": "^8.3.0",
