--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.26",
+    "aos": "^2.3.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
