feat: import previews cretead components from version 1
import about, experience and header components

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "next": "11.1.2",
     "react": "17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "17.0.2",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3"
