feat: creates contact, email, and footer components based on version 1

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/utils/config.js", "src/utils/config.js"  ],
   "exclude": [
     "node_modules"
   ]
