--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint src"
   },
   "dependencies": {
+    "@babel/core": "^7.18.2",
     "@types/node": "^16.10.2",
     "@types/react": "^17.0.26",
     "aos": "^2.3.4",
@@ -16,6 +17,7 @@
     "react": "17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "17.0.2",
+    "react-icons": "^4.4.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3"
   },
